objects/Supplier_Facility__c.object
<CustomObject>
    <description>Supplier Facility Relationship</description>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <description>Contract Signed Date</description>
        <formula>Supplier__r.Contract_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Signed Date</inlineHelpText>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <formula>Facility__r.Facility_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Facility Number</inlineHelpText>
        <label>Facility Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <description>Facility</description>
        <inlineHelpText>Facility</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Suppliers Facilities</relationshipLabel>
        <relationshipName>Suppliers_Facilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Organization</description>
        <formula>TEXT(Supplier__r.Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Organization</inlineHelpText>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Facility__r.Main_Product_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product_Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_Status__c</fullName>
        <description>Relation Status</description>
        <inlineHelpText>Relation Status</inlineHelpText>
        <label>Relation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Name_2__c</fullName>
        <description>Supplier Name</description>
        <formula>Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Supplier Name</inlineHelpText>
        <label>Supplier Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <description>Supplier Name</description>
        <formula>Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Supplier Name</inlineHelpText>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <description>Supplier Number</description>
        <formula>Supplier__r.Supplier_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Supplier Number</inlineHelpText>
        <label>Supplier Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Status__c</fullName>
        <description>Supplier Status</description>
        <formula>TEXT(Supplier__r.Supplier_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Supplier Status</inlineHelpText>
        <label>Supplier Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Type__c</fullName>
        <description>Supplier Type</description>
        <formula>TEXT(Supplier__r.Supplier_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Supplier Type</inlineHelpText>
        <label>Supplier Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>Supplier</description>
        <inlineHelpText>Supplier</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Suppliers Facilities</relationshipLabel>
        <relationshipName>Suppliers_Facilities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supplier Facility</label>
    <nameField>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Supplier Facility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>